fixing styling of hero on mobile

--- a/src/Pages/Home/Hero/_mobile.scss
+++ b/src/Pages/Home/Hero/_mobile.scss
@@ -5,9 +5,10 @@
     #Hero {
 
         video {
-            height: 50vh;
             position: relative;
-            left: -60%;
+            min-height: 50vh;
+            object-fit: cover;
+            object-position: 50% 0;
         }
     
         &::before {
