--- a/src/Pages/Home/Hero/_tablet.scss
+++ b/src/Pages/Home/Hero/_tablet.scss
@@ -7,9 +7,10 @@
         max-width: 100vw;
 
         video {
-            min-height: 40vh;
             position: relative;
-            left: -60%;
+            min-height: 50vh;
+            object-fit: cover;
+            object-position: 50% 0;
         }
     
         &::before {
